--- a/site1/index.html
+++ b/site1/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>The Website (Shotgunn)</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="/stylesheet/layout1.css">
 </head>
-<body>
-<h1>hello</h1>
+<body bgcolor="white">
+	<header>
+		<a href="https://www.youtube.com/channel/UCQDb90vDJ_Ju2vGhOx6hsoQ"><img class="logo" src="/resources/main_poster1.jpg" alt="Shotgunn"></a>
+		<h1 class="main">Shotgunn</h1>
+	</header>
 </body>
 </html>
